--- a/inicial/index.html
+++ b/inicial/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
@@ -11,7 +12,7 @@
           src="./images/logo-rocketseat.svg"
           alt="Rocketseat"
         />
-        <div class="menu-section">
+        <div class="menu-section on">
           <div class="menu-toggle">
             <div class="one"></div>
             <div class="two"></div>
@@ -135,5 +136,6 @@
     </div>
 
     <script src="scripts.js"></script>
+    <script src="menu.js"></script>
   </body>
 </html>
