--- a/inicial/index.html
+++ b/inicial/index.html
@@ -124,11 +124,8 @@
         <div class="modal-content">
           <div class="video-background">
             <div class="video-foreground">
-              <iframe
-                src="https://www.youtube.com/embed/GykTLqODQuU"
-                frameborder="0"
-                allowfullscreen
-              ></iframe>
+              <img class="imagens" src="images/melhores-tecnologias.svg" alt="">
+              <img class="imagens2" src="images/logo-rocketseat.svg" alt="">
             </div>
           </div>
         </div>
